--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,7 +71,7 @@ p {
 }
 .header-area {
   position: relative;
-  height: 40vh;
+  height: 60vh;
   background: #5bc0de;
   background-attachment: fixed;
   background-position: center center;
@@ -103,6 +103,7 @@ p {
   color: #fff;
   text-align: center;
   z-index: 1;
+  padding-top: 50px !important;
 }
 .banner h1 {
   font-weight: 800;
@@ -115,7 +116,6 @@ p {
   left: 0;
   top: 0;
   padding: 0;
-  width: 100%;
   transition: background 0.6s ease-in;
   z-index: 99999;
 }
