--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,6 +95,15 @@ p {
     height: 3vh;
 }
 
+#facebook-icon {
+    font-size: 4rem;
+    color: white;
+}
+
+.facebook-div {
+    float: right;
+}
+
 .banner {
   display: flex;
   align-items: center;
@@ -234,6 +243,52 @@ p {
 .mainabout {
     background-color: #5bc0de;
 }
+/* Company title */
+#company-name {
+    text-decoration: none;
+    color: white;
+}
+
+#company-name:hover {
+    color: red;
+    text-decoration: none;
+}
+
+
+/* Contact form from W3 schools*/
+
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical
+}
+
+input[type=submit] {
+  background-color: #c0ca33;
+  color: #555;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #555;
+  color: #c0ca33;
+}
+
+/* Add a background color and some padding around the form */
+.container {
+  border-radius: 5px;
+  padding: 20px;
+}
+
+/* Media queries */
 
 @media screen and (max-width: 768px) {
   .navbar-brand {
@@ -286,6 +341,27 @@ p {
     -ms-transform-origin: top;
     transform-origin: top;
   }
+}
+
+/* from w3 schools tutorial */
+#myBtn {
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #c0ca33;
+  color: #555;
+  cursor: pointer;
+  padding: 15px;
+  border-radius: 10px;
+  font-size: 18px;
+}
+
+#myBtn:hover {
+  background-color: #555;
+  color: #c0ca33;
 }
 
 @-webkit-keyframes navbar-animation {
