--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* Generic styling for all */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700,800');
 @import url('https://fonts.googleapis.com/css?family=Lobster');
 html {
@@ -69,6 +70,8 @@ p {
   top: 0;
   background-color: rgba(0, 0, 0, .3);
 }
+
+/* Styling for top banner */
 .header-area {
   position: relative;
   height: 60vh;
@@ -78,6 +81,8 @@ p {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+/* Styling for footer */
 
 .footer-area {
   position: relative;
@@ -98,10 +103,6 @@ p {
 #facebook-icon {
     font-size: 4rem;
     color: white;
-}
-
-.facebook-div {
-    float: right;
 }
 
 .banner {
@@ -243,49 +244,80 @@ p {
 .mainabout {
     background-color: #5bc0de;
 }
-/* Company title */
-#company-name {
-    text-decoration: none;
-    color: white;
+
+#fcf-form {
+    display:block;
 }
 
-#company-name:hover {
-    color: red;
-    text-decoration: none;
+.fcf-body {
+    margin: 0;
+    font-size: 2rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #555;
+    text-align: left;
+    background-color: #fff;
+    padding: 50px;
+    padding-bottom: 10px;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    max-width: 100%;
+}
+
+.fcf-form-group {
+    margin-bottom: 1rem;
+}
+
+.fcf-input-group {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -ms-flex-align: stretch;
+    align-items: stretch;
+    width: 100%;
+}
+
+.fcf-form-control {
+    display: block;
+    width: 100%;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    outline: none;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.fcf-form-control:focus {
+    border: 1px solid #313131;
+}
+
+select.fcf-form-control[size], select.fcf-form-control[multiple] {
+    height: auto;
+}
+
+textarea.fcf-form-control {
+    height: auto;
+}
+
+label.fcf-label {
+    display: inline-block;
+    margin-bottom: 0.8rem;
 }
 
 
-/* Contact form from W3 schools*/
-
-input[type=text], select, textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical
-}
-
-input[type=submit] {
-  background-color: #c0ca33;
-  color: #555;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type=submit]:hover {
-  background-color: #555;
-  color: #c0ca33;
-}
-
-/* Add a background color and some padding around the form */
-.container {
-  border-radius: 5px;
-  padding: 20px;
+@media (prefers-reduced-motion: reduce) {
+    .fcf-btn {
+        transition: none;
+    }
 }
 
 /* Media queries */
