--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,25 +61,29 @@ p {
   -ms-transform: scaleX(1);
   transform: scaleX(1);
 }
-.overlay::after {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  top: 0;
-  background-color: rgba(0, 0, 0, .3);
-}
 
 /* Styling for top banner */
 .header-area {
   position: relative;
-  height: 60vh;
-  background: #5bc0de;
+  height: 65vh;
+  background: #789B93;
   background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.logo {
+    padding-top: 30px;
+}
+
+.cvnotice {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.cvlist {
+    padding-top: 10px;
 }
 
 /* Styling for footer */
@@ -87,7 +91,7 @@ p {
 .footer-area {
   position: relative;
   height: 10vh;
-  background: #5bc0de;
+  background: #789B93;
   background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
@@ -105,20 +109,18 @@ p {
     color: white;
 }
 
-.banner {
+.company-header {
   display: flex;
   align-items: center;
-  position: relative;
-  height: 100%;
   color: #fff;
   text-align: center;
   z-index: 1;
-  padding-top: 50px !important;
+  padding-top: 20px;
 }
-.banner h1 {
+.company-header h1 {
   font-weight: 800;
 }
-.banner p {
+.company-header p {
   font-weight: 700;
 }
 .navbar {
@@ -242,7 +244,8 @@ p {
 }
 
 .mainabout {
-    background-color: #5bc0de;
+    background-color: #789B93;
+    color: white;
 }
 
 #fcf-form {
@@ -283,8 +286,8 @@ p {
     display: block;
     width: 100%;
     height: calc(1.5em + 0.75rem + 2px);
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
+    padding: 0.375rem 1rem;
+    font-size: 2rem;
     font-weight: 400;
     line-height: 1.5;
     color: #495057;
@@ -298,6 +301,7 @@ p {
 
 .fcf-form-control:focus {
     border: 1px solid #313131;
+    background-color: #f5f5f5;
 }
 
 select.fcf-form-control[size], select.fcf-form-control[multiple] {
