--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,24 +113,6 @@ p {
     padding-top: 20px;
 }
 
-/* Styling for footer */
-
-.footer-area {
-  position: relative;
-  height: 10vh;
-  background: #789B93;
-  background-attachment: fixed;
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-#thinnerfooter {
-    color: white;
-    text-align: center;
-    height: 3vh;
-}
-
 #facebook-icon {
     font-size: 4rem;
     color: white;
@@ -421,7 +403,7 @@ label.fcf-label {
 
 
 
-/* from w3 schools tutorial */
+/* from w3 schools tutorial btn styling*/
 #myBtn {
   position: fixed;
   bottom: 20px;
@@ -508,10 +490,11 @@ label.fcf-label {
 .site-footer
 {
   background-color: #789B93;
-  padding:45px 0 20px;
+  padding:25px 0 20px;
   font-size:15px;
   line-height:24px;
   color: white;
+  min-width: 100%;
 }
 .site-footer hr
 {
@@ -526,9 +509,7 @@ label.fcf-label {
 {
   color:#fff;
   font-size:16px;
-  text-transform:uppercase;
   margin-top:5px;
-  letter-spacing:2px
 }
 .site-footer a
 {
@@ -563,17 +544,21 @@ label.fcf-label {
 }
 .site-footer .social-icons
 {
-  text-align:right
+  text-align:right;
+  font-size: 35px;
 }
 .site-footer .social-icons a
 {
   width:60px;
   height:60px;
-  line-height:40px;
+  line-height:80px;
   margin-left:6px;
   margin-right:0;
   border-radius:100%;
-  background-color:#c0ca33
+  background-color:#c0ca33;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .copyright-text
 {
@@ -618,12 +603,8 @@ label.fcf-label {
 }
 .social-icons a{
   background-color:#eceeef;
-  color:#818a91;
-  font-size:16px;
   display:inline-block;
   line-height:44px;
-  width:44px;
-  height:44px;
   text-align:center;
   margin-right:8px;
   border-radius:100%;
@@ -639,9 +620,9 @@ label.fcf-label {
 .social-icons.size-sm a
 {
   line-height:34px;
-  height:34px;
-  width:34px;
-  font-size:14px
+  height:14px;
+  width:14px;
+  font-size:34px
 }
 .social-icons a.facebook:hover
 {
