--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,7 @@ body {
   font-size: 1.6rem;
   font-weight: 400;
   color: #555;
+  background-color: #f7f7f7;
 }
 h1 {
   margin-bottom: 0.5em;
@@ -67,6 +68,7 @@ p {
   position: relative;
   height: 45vh;
   background: #789B93;
+  background-image: linear-gradient(#789B93,  #9EC171);
   background-attachment: fixed;
   background-position: center center;
   background-repeat: no-repeat;
@@ -76,10 +78,6 @@ p {
 /* Styling for logo */
 .logo {
     padding-top: 30px;
-}
-
-.animate__backInDown {
-    border-radius: 15px !important;
 }
 
 /* Coronavirus notice */
@@ -615,7 +613,6 @@ label.fcf-label {
 .social-icons a:active,.social-icons a:focus,.social-icons a:hover
 {
   color:#fff;
-  background-color:#29aafe
 }
 .social-icons.size-sm a
 {
