--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@ body {
   font-weight: 400;
   color: #555;
   background-color: #f7f7f7;
+  margin-right: -8px;
 }
 h1 {
   margin-bottom: 0.5em;
@@ -66,13 +67,17 @@ p {
 /* Styling for top banner */
 .header-area {
   position: relative;
-  height: 45vh;
-  background: #789B93;
-  background-image: linear-gradient(#789B93,  #9EC171);
-  background-attachment: fixed;
+  background: #517664;
+  /*background-image: linear-gradient(#789B93,  #9EC171);*/
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
+  padding-bottom: 20px;
+}
+
+.bg-black {
+    background: #517664;
+    padding-bottom: 20px;
 }
 
 /* Styling for logo */
@@ -392,15 +397,6 @@ label.fcf-label {
   }
 }
 
-@media screen and (max-width: 540px) {
-    .hidemobile {
-        visibility: hidden;
-        display: none;
-    }
-}
-
-
-
 /* from w3 schools tutorial btn styling*/
 #myBtn {
   position: fixed;
@@ -591,8 +587,7 @@ label.fcf-label {
   display:inline-block;
   margin-bottom:4px
 }
-.social-icons li.title
-{
+.social-icons li.title {
   margin-right:15px;
   text-transform:uppercase;
   color:white;
