--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,14 +65,15 @@ p {
 }
 
 /* Styling for top banner */
-.header-area {
+.header-area,
+.bgmatch {
   position: relative;
   background: #517664;
-  /*background-image: linear-gradient(#789B93,  #9EC171);*/
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
   padding-bottom: 20px;
+  color: white;
 }
 
 .bg-black {
@@ -258,7 +259,7 @@ p {
 }
 
 .mainabout {
-    background-color: #789B93;
+    background-color: #517664;
     color: white;
 }
 
@@ -483,7 +484,7 @@ label.fcf-label {
 
 .site-footer
 {
-  background-color: #789B93;
+  background-color: #517664;
   padding:25px 0 20px;
   font-size:15px;
   line-height:24px;
