--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,6 +107,15 @@ p {
     text-decoration: none;
 }
 
+/* Styling for portfolio page */
+
+.services-section {
+    background-color: #517664;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 /* carousel for portfolio */
 
 .carousel-item {
