--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -575,22 +575,22 @@ label.fcf-label {
 
 /* Kids page */
 
-#redbtn {
+#redbtn, #redbtn2 {
     background-color: red;
     color: white;
 }
 
-#bluebtn {
+#bluebtn, #bluebtn2 {
     background-color: blue;
     color: white;
 }
 
-#greenbtn {
+#greenbtn, #greenbtn2 {
     background-color: green;
     color: white;
 }
 
-#orangebtn {
+#orangebtn, #orangebtn2 {
     background-color: orange;
     color: white;
 }
